ajout des boutons commentaires sur chaque carte de la liste des restaurants

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                                 <option value="5">5 étoiles</option>
                             </select>
                             <button type="button" class="filter-btn btn btn-light">Filtrer</button>  
+                            <input type="reset" value="Reset">
                         </div>                                            
                     </form>
                 </div>
