--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <form>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Note :</label>
-                                <select id="note" class="custom-select custom-select-sm">
+                                <select class="note custom-select custom-select-sm">
                                     <option  selected>Note</option>
                                     <option value="1">1 étoile</option>
                                     <option value="2">2 étoiles</option>
@@ -74,12 +74,12 @@
                             </div>
                             <div class="form-group">
                                 <label for="recipient-name" class="col-form-label">Commentaire : </label>
-                                <input type="text" class="form-control" id="commentToAdd">
+                                <textarea class="commentToAdd form-control" rows="3"></textarea>
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="publishCommentBtn" class="btn btn-secondary">Publier</button>
+                        <button type="button" class="publishCommentBtn btn btn-secondary">Publier</button>
                     </div>
                 </div>
             </div>
