delete bouton dans info window

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <form>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Note :</label>
-                                <select class="note custom-select custom-select-sm">
+                                <select id="note" class="custom-select custom-select-sm">
                                     <option  selected>Note</option>
                                     <option value="1">1 étoile</option>
                                     <option value="2">2 étoiles</option>
