rectification sur ajout d'un com

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <!-- modal ajout d'un commentaire -->
-        <div id ="addCommentModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!--         <div id ="addCommentModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- modal ajout d'un restaurant -->
         <div id ="addRestaurantModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
