--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <!-- div pour map -->
             <div id="map" class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
             </div>
+            <!-- div pour panorama streetview -->
+            <div id="pano" class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+            </div>
             <!-- div pour liste note et boutton filter -->
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 list ">
                 <div class="filter">
