ajout d'un panorama google street view

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <!-- div pour panorama streetview -->
             <div id="pano" class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
             </div>
+            <button type="button" id="resetMapBtn" class="btn btn-secondary btn-sm">Réinitialiser la carte</button>
+            <button type="button" id="backToMapBtn" class="btn btn-secondary btn-sm">Revenir à la carte</button>
             <!-- div pour liste note et boutton filter -->
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 list ">
                 <div class="filter">
