--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- chargement de l'API javascript Maps avec une clé personnelle / async permet au navigateur d'afficher le reste de votre site Web pendant le chargement de l'API Maps Lorsque l'API est prête, elle appelle la fonction spécifiée à l'aide du callback-->
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script src="js/data.js" ></script>
     <script src="js/apikey.js" ></script>
     <script src="js/map.js" ></script>
