--- a/index.html
+++ b/index.html
@@ -100,10 +100,14 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form class="needs-validation" novalidate>
                             <div class="form-group">
-                                <label for="recipient-name" class="col-form-label">Nom du restaurant : </label>
-                                <input type="text" class="form-control" id="restToAdd">
+                                <label for="recipient-name" class="col-form-label" >Nom du restaurant : </label>
+                                <input type="text" class="form-control" id="restToAdd" required>
+                                <div class="valid-feedback">Ok !</div>
+                                <div class="invalid-feedback">
+                                    Tu dois saisir un nom de restaurant !
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label for="message-text" class="col-form-label">Adresse :</label>
