--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <button type="button" id="resetMapBtn" class="btn btn-secondary btn-sm">Réinitialiser la carte</button>
             <button type="button" id="backToMapBtn" class="btn btn-secondary btn-sm">Revenir à la carte</button>
-            <!-- div pour liste note et boutton filter -->
+            <!-- div pour liste note et boutton filtrer -->
             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 list ">
                 <div class="filter">
                     <form>
@@ -54,41 +54,6 @@
                 </div>
             </div>
         </div>
-        <!-- modal ajout d'un commentaire -->
-<!--         <div id ="addCommentModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="addCommentModalLabel"></h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="message-text" class="col-form-label">Note :</label>
-                                <select id="note" class="custom-select custom-select-sm">
-                                    <option  selected>Note</option>
-                                    <option value="1">1 étoile</option>
-                                    <option value="2">2 étoiles</option>
-                                    <option value="3">3 étoiles</option>
-                                    <option value="4">4 étoiles</option>
-                                    <option value="5">5 étoiles</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="recipient-name" class="col-form-label">Commentaire : </label>
-                                <textarea class="commentToAdd form-control" rows="3"></textarea>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="publishCommentBtn btn btn-secondary">Publier</button>
-                    </div>
-                </div>
-            </div>
-        </div> -->
         <!-- modal ajout d'un restaurant -->
         <div id ="addRestaurantModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -133,7 +98,6 @@
     <script src="js/map.js" ></script>
     <script src="js/restaurant.js" ></script>
     <script src="js/main.js" ></script>
-    
     
     </body>
 </html>
