--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <title>Food Finder - Trouves ton restaurant !</title>
-        <meta name="viewport" content="initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Raleway|Shrikhand&display=swap" rel="stylesheet">
@@ -67,7 +67,7 @@
                     <div class="modal-body">
                         <form class="needs-validation" novalidate>
                             <div class="form-group">
-                                <label for="recipient-name" class="col-form-label" >Nom du restaurant : </label>
+                                <label for="new-restaurant" class="col-form-label" >Nom du restaurant : </label>
                                 <input type="text" class="form-control" id="restToAdd" required>
                                 <div class="valid-feedback">Ok !</div>
                                 <div class="invalid-feedback">
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="message-text" class="col-form-label">Adresse :</label>
+                                <label for="new-adress" class="col-form-label">Adresse :</label>
                                 <textarea class="form-control" id="adressToAdd"></textarea>
                             </div>
                         </form>
@@ -93,8 +93,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- chargement de l'API javascript Maps avec une clé personnelle / async permet au navigateur d'afficher le reste de votre site Web pendant le chargement de l'API Maps Lorsque l'API est prête, elle appelle la fonction spécifiée à l'aide du callback-->
     <script src="js/data.js" ></script>
-    <script src="js/apikey.js" ></script>
-    <script src="js/map.js" ></script>
+    <script src="js/apikey.js" ></script>   
+    <script src="js/map.js" ></script>   
     <script src="js/restaurant.js" ></script>
     <script src="js/main.js" ></script>
     
